Remove aXMLRPC and use WordPress XMLRPC